--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/be-vietnam": "^0.2.0",
+    "@fontsource/inter": "^5.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -25,6 +26,7 @@
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "date-fns": "^4.1.0",
+    "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
     "react": "^18.2.0",
